[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tstar-search"
version = "0.1.0"
description = "T*: Efficient Visual Search Framework for Long Videos"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "T* Team"}]

dependencies = [
    "numpy>=1.26.4",
    "opencv-python>=4.10.0",
    "Pillow>=10.4.0",
    "tqdm>=4.67.1",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "imageio>=2.30.0",
    "scikit-image>=0.21.0,<0.23.0",
    "scipy>=1.11.0",
    "decord>=0.6.0",
    "fire>=0.4.0",
    "qwen-vl-utils==0.0.8",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "transformers>=4.49.0",
    "tokenizers>=0.21.0",
    "accelerate>=0.26.0",
    "sentencepiece>=0.1.99",
    "openai>=1.59.3",
    "safetensors>=0.5.0",
    "huggingface-hub>=0.27.0",
    "supervision>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
tstar-check = "tstar.check_deps:main"

[tool.setuptools]
packages = ["tstar"]

[tool.setuptools.package-dir]
tstar = "TStar"