[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tstar-search"
version = "0.1.0"
description = "T*: Efficient Visual Search Framework for Long Videos"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "T* Team"}]

dependencies = [
    # Core dependencies
    "numpy>=2.2.6",
    "opencv-python>=4.12.0",
    "Pillow>=11.3.0",
    "tqdm>=4.67.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    
    # PyTorch (your working versions)
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    
    # Transformers ecosystem
    "transformers>=4.57.0",
    "tokenizers>=0.22.1",
    "accelerate>=1.10.1",
    "sentencepiece",
    "safetensors>=0.6.2",
    "huggingface-hub>=0.35.3",
    "peft>=0.17.1",
    
    # Scientific computing
    "matplotlib>=3.10.7",
    "scipy>=1.16.2",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    
    # Computer vision
    "decord>=0.6.0",
    
    # QWen support
    "qwen-vl-utils>=0.0.8",
    
    # T* specific (what you added)
    "imageio>=2.30.0",
    "supervision>=0.25.0",
    
    # Additional
    "openai",
    "sentence-transformers>=5.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
tstar-check = "tstar.check_deps:main"

[tool.setuptools]
packages = ["tstar"]

[tool.setuptools.package-dir]
tstar = "TStar"